# flowselect

./: .gitattributes  .gitignore  README.md  pyproject.toml
conf/: global.yaml
conf/data/: dgp.yaml  rnasq.yaml  soybean.yaml
conf/dgp_covariate/: gaussian_ar.yaml  gaussian_ar_mixture.yaml
conf/dgp_response/: linear.yaml  sin_cos.yaml  sin_cos5.yaml
conf/joint/: ddlk.yaml  discrete_flow.yaml  flow_cond.yaml  gaussflow.yaml  gaussmaf.yaml  gaussnvp.yaml  maf.yaml  nsf.yaml  realnvp.yaml  truth.yaml
conf/knockoff/: ddlk.yaml  deepknockoff.yaml  gan.yaml  gaussnvp.yaml  mass.yaml  mcmc.yaml  modelx.yaml  realnvp.yaml
conf/variable_selection/: ada.yaml  hrt.yaml  hrtrf.yaml  khrt.yaml  lasso.yaml  rf.yaml  rfkn.yaml  rfnoise.yaml  ridge.yaml  ridge_crt.yaml
data/: README.md  get_scrnaseq_data.py  test_data.csv
experiments/: README.md  analyze_linear_comparison.R  analyze_linear_comparison_ddlk_truejoint.R  analyze_linear_comparison_different_n.R  analyze_linear_comparison_hrt.R  analyze_linear_comparison_modelx.R  convert_hrt_null_to_h5.py  extract_valid_loglik.R  knockoff_comparison.r  manhattan_plot.R  plot_asymptotic_fdr.R  protein_columns.txt  view_asymptotic_fdr.py
experiments/linear_experiment/: crt_mcmc.sh  crt_mcmc_different_n.sh  ddlk_mdnjoint.sh  ddlk_mdnjoint_different_n.sh  ddlk_truejoint.sh  hrt.sh  (+9 more)
flowselect/: bisection_grad.py  crt.py  data.py  flows.py  hrt.py  joint.py  knockoff_generators.py  main.py  modelx.py  r_packages.R  response.py  selection_methods.py  util.py
tests/: conftest.py  test_flows.py  test_modelx.py  test_smoke.py
(+42 files in other folders)
